Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/JnJTask__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ENT_Type__c</fullName>
        <label>ENT Type</label>
        <picklist>
            <picklistValues>
                <fullName>test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qrtly_Revenue_Growth__c</fullName>
        <label>Qrtly Revenue Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_in_number_of_Qrtly_cases__c</fullName>
        <label>Results in number of Qrtly cases</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Task_Group__c</fullName>
        <label>Task Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tasks__c</fullName>
        <label>Tasks</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>JnJTask</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JnJ-{0000}</displayFormat>
        <label>JnJTask Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JnJTasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>